--- a/apps/example/CMakeLists.txt
+++ b/apps/example/CMakeLists.txt
@@ -3,8 +3,11 @@ get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 string(REPLACE " " "_" name ${name})
 string(TOLOWER ${name} name)
 
+# sources list
+set(source main.cpp)
+
 # config executable
-add_executable         (${name} main.cpp)
-set_target_properties  (${name} PROPERTIES FOLDER "${PROJECT_NAME}")
-target_link_libraries  (${name} PRIVATE kdenticon)
-target_compile_features(${name} PRIVATE cxx_std_17)
+add_executable       (${name} ${source})
+set_target_properties(${name} PROPERTIES FOLDER "${PROJECT_NAME}")
+set_target_properties(${name} PROPERTIES CXX_STANDARD 17)
+target_link_libraries(${name} PRIVATE kdenticon)
