--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,11 +18,21 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(Catch2)
 set_target_properties     (Catch2 Catch2WithMain PROPERTIES FOLDER "third_party/tests")
 
+# ignore warnings
+foreach(_target Catch2 Catch2WithMain)
+    get_target_property(_includes ${_target} INTERFACE_INCLUDE_DIRECTORIES)
+    target_include_directories(${_target} SYSTEM INTERFACE ${_includes})    
+endforeach()
+
 #[[ subprojects ]]
 # shared settings for subprojects
 add_compile_options(
+    "$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-pedantic-errors;-Wall;-Wextra;-Wconversion;-Werror>"
+    "$<$<AND:$<CONFIG:RELEASE>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-O3>"
+    "$<$<AND:$<CONFIG:DEBUG>,$<NOT:$<CXX_COMPILER_ID:MSVC>>>:-g>"
+
     "$<$<CXX_COMPILER_ID:MSVC>:/WX;/W4;/utf-8>"
-    "$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-g;-pedantic-errors;-Wall;-Wextra;-Wconversion;-Werror>")
+    "$<$<AND:$<CONFIG:RELEASE>,$<CXX_COMPILER_ID:MSVC>>:/O2>")
 
 # add all subprojects
-add_subdirectory(core_tests)
+add_subdirectory(functional_tests)
