--- a/app/kaleidoscope/CMakeLists.txt
+++ b/app/kaleidoscope/CMakeLists.txt
@@ -30,14 +30,14 @@ endforeach(file)
 
 #[[ executable ]]
 set(source view.cc render.cc)
-set(header tool.h  render.h model.h viewmodel.h)
+set(header tool.h  render.h error.h model.h viewmodel.h)
 
 add_executable            (${name} WIN32 ${source} ${header} ${shader} ${BACKWARD_ENABLE})
 add_backward              (${name})
 set_target_properties     (${name} PROPERTIES FOLDER "${PROJECT_NAME}")
 set_target_properties     (${name} PROPERTIES CXX_STANDARD 23)
 target_include_directories(${name} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/compiled_shader")
-target_link_libraries     (${name} PRIVATE d3d12 dxgi)
+target_link_libraries     (${name} PRIVATE d3d12 dxgi dcomp)
 target_compile_options    (${name} PRIVATE
     "$<$<CXX_COMPILER_ID:MSVC>:/WX;/W4;/utf-8>"
     "$<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:RELEASE>>:/O2>")
