--- a/app/kaleidoscope/CMakeLists.txt
+++ b/app/kaleidoscope/CMakeLists.txt
@@ -37,7 +37,7 @@ add_backward              (${name})
 set_target_properties     (${name} PROPERTIES FOLDER "${PROJECT_NAME}")
 set_target_properties     (${name} PROPERTIES CXX_STANDARD 23)
 target_include_directories(${name} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/compiled_shader")
-target_link_libraries     (${name} PRIVATE d3d12 dxgi dcomp)
+target_link_libraries     (${name} PRIVATE d3d12 d3d11 dxgi dcomp)
 target_compile_options    (${name} PRIVATE
     "$<$<CXX_COMPILER_ID:MSVC>:/WX;/W4;/utf-8>"
     "$<$<AND:$<CXX_COMPILER_ID:MSVC>,$<CONFIG:RELEASE>>:/O2>")
